fix: adjust layout spacing and padding for price range container

--- a/app/catalog/catalog.module.css
+++ b/app/catalog/catalog.module.css
@@ -129,8 +129,9 @@
   gap: 30px;
   min-height: 500px;
   width: 100%;
-  /* Ensure full width */
-  justify-content: space-between;
+  gap: 60px;
+  /* justify-content: space-between; */
+  margin: 1rem 4rem;
 }
 
 /* Sidebar Filters */
@@ -240,7 +241,9 @@
 /* catalog.module.css */
 .priceRangeContainer {
   position: relative;
-  padding: 30px 0;
+  max-width: 240px;
+  margin-left: 30px;
+  padding: 30px 0 15px 0;
   user-select: none;
   -webkit-user-select: none;
   /* Для Safari */
